--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <p>THIS IS NEW FILE TO GIT PRACTICE</p>
-<p>THIS IS NEW FEATURE2 ADDED IN THE INDEX FILE</p>
+<p>THIS IS NEW FEATURE2 ADDED IN THE INDEX FILE (dropdown)</p>
